[gd_scene load_steps=4 format=3 uid="uid://dya5kxx132fgp"]

[ext_resource type="Script" uid="uid://bco7hof3wqck4" path="res://scenes/Nodes/valueslider.gd" id="1_4kxw6"]
[ext_resource type="Script" uid="uid://duykdpsfmfw38" path="res://scenes/Nodes/breakfilemaker.gd" id="2_6ltu5"]
[ext_resource type="Script" uid="uid://c503vew41pw80" path="res://scenes/main/scripts/color_rect_theme_invert.gd" id="2_du0of"]

[node name="VBoxContainer" type="VBoxContainer"]
custom_minimum_size = Vector2(270, 0)
offset_right = 270.0
offset_bottom = 57.0
script = ExtResource("1_4kxw6")

[node name="SliderLabel" type="Label" parent="."]
layout_mode = 2
text = "Value Name"

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
split_offset = 230
dragging_enabled = false

[node name="HSlider" type="HSlider" parent="HSplitContainer"]
custom_minimum_size = Vector2(0, 23)
layout_mode = 2
size_flags_vertical = 1
value = 10.0

[node name="PopupMenu" type="PopupMenu" parent="HSplitContainer/HSlider"]
size = Vector2i(200, 100)
item_count = 1
item_0/text = "Add Automation Settings"
item_0/id = 0

[node name="LineEdit" type="LineEdit" parent="HSplitContainer"]
layout_mode = 2
text = "0.0"
alignment = 2
max_length = 5
flat = true
select_all_on_focus = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_bottom = 3

[node name="BreakFileMaker" type="Window" parent="."]
title = "Add Automation"
position = Vector2i(340, 210)
size = Vector2i(700, 300)
visible = false
exclusive = true
unresizable = true

[node name="Label" type="Label" parent="BreakFileMaker"]
offset_left = 319.0
offset_top = 255.0
offset_right = 693.0
offset_bottom = 300.0
text = "Double click to add/remove automation"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="BreakFileMaker" groups=["invertable_background"]]
offset_left = -20.0
offset_top = 255.0
offset_right = 716.0
offset_bottom = 300.0
mouse_filter = 2
color = Color(0.101961, 0.101961, 0.101961, 0.329412)
script = ExtResource("2_du0of")

[node name="AutomationEditor" type="Control" parent="BreakFileMaker"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("2_6ltu5")

[node name="SaveAutomationButton" type="Button" parent="BreakFileMaker"]
offset_left = 7.0
offset_top = 262.0
offset_right = 152.0
offset_bottom = 295.0
text = "Save Automation"

[node name="CancelButton" type="Button" parent="BreakFileMaker"]
offset_left = 159.0
offset_top = 262.0
offset_right = 304.0
offset_bottom = 295.0
text = "Cancel"

[connection signal="gui_input" from="HSplitContainer/HSlider" to="." method="_on_h_slider_gui_input"]
[connection signal="value_changed" from="HSplitContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="index_pressed" from="HSplitContainer/HSlider/PopupMenu" to="." method="_on_popup_menu_index_pressed"]
[connection signal="focus_exited" from="HSplitContainer/LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="text_submitted" from="HSplitContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="close_requested" from="BreakFileMaker" to="." method="_on_break_file_maker_close_requested"]
[connection signal="button_down" from="BreakFileMaker/SaveAutomationButton" to="." method="_on_save_automation_button_down"]
[connection signal="button_down" from="BreakFileMaker/SaveAutomationButton" to="BreakFileMaker/AutomationEditor" method="_on_save_automation_button_down"]
[connection signal="button_down" from="BreakFileMaker/CancelButton" to="." method="_on_save_automation_2_button_down"]
